[project]
name = "openai-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zaryabjiya", email = "irfanlaraib141@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agent>=0.1.3",
    "openai-agents>=0.2.3",
    "streamlit>=1.46.1",
]

[project.scripts]
openai-assignment = "openai_assignment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
